RESOLVED FIXED 100808
REGRESSION (tile cache layers): bits of tiled layers are missing with certain 3D transforms
https://bugs.webkit.org/show_bug.cgi?id=100808
Summary REGRESSION (tile cache layers): bits of tiled layers are missing with certain...
Simon Fraser (smfr)
Reported 2012-10-30 21:30:01 PDT
REGRESSION (tile cache layers): bits of tiled layers are missing with certain 3D transforms
Attachments
Patch (34.08 KB, patch)
2012-10-30 21:40 PDT, Simon Fraser (smfr)
dino: review+
webkit.review.bot: commit-queue-
Simon Fraser (smfr)
Comment 1 2012-10-30 21:30:45 PDT
Simon Fraser (smfr)
Comment 2 2012-10-30 21:40:37 PDT
WebKit Review Bot
Comment 3 2012-10-31 04:07:25 PDT
Comment on attachment 171576 [details] Patch Attachment 171576 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/14685143 New failing tests: platform/chromium/virtual/softwarecompositing/tiling/rotated-tiled-clamped.html platform/chromium/virtual/softwarecompositing/tiling/rotated-tiled-preserve3d-clamped.html compositing/tiling/rotated-tiled-preserve3d-clamped.html compositing/tiling/rotated-tiled-clamped.html
Simon Fraser (smfr)
Comment 4 2012-10-31 12:03:22 PDT
Note You need to log in before you can comment on or make changes to this bug.